# Multi-Index-Rag-

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: indexes.yaml  router_actions.yaml  settings.py
notebooks/: 00_explore_data.ipynb  01_baseline_rag.ipynb  02_router_analysis.ipynb
scripts/: build_centroids.py  phase0_build_indexes.py  phase1_collect_labels.py  phase2_train_router.py  phase3_bandit_online.py  phase4_run_eval.py
src/: __init__.py
src/api/: __init__.py  app.py  routes.py
src/evaluation/: __init__.py  answer_metrics.py  eval_set.py  retrieval_metrics.py  run_ablations.py  system_metrics.py
src/logging/: __init__.py  feedback.py  router_logger.py
src/rag/: __init__.py  baseline.py  llm.py  pipeline.py  reranker.py
src/retrievers/: __init__.py  base.py  bm25.py  build_indexes.py  code.py  index_store.py  registry.py  sql.py  vector.py
src/router/: base.py
src/router/bandit/: __init__.py  arms.py  bandit_router.py  context.py  epsilon_greedy.py  linucb.py  ope.py  reinforce.py
src/router/learned/: __init__.py  inference.py  model.py  train.py
src/router/rules/: __init__.py  centroid_router.py  combined.py  keyword_router.py
src/schema/: __init__.py  chunk.py  retrieval_result.py  router_decision.py
tests/: conftest.py  test_rag_reranker.py
tests/test_evaluation/: test_eval_set.py  test_metrics.py  test_run_ablations.py
tests/test_retrievers/: test_base.py
tests/test_router_bandit/: test_bandit.py
tests/test_router_learned/: test_model.py
tests/test_router_rules/: test_combined.py  test_keyword.py
